--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.6",
     "vite": "^5.2.0",
     "vite-plugin-eslint": "^1.8.1"
